--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-<title>龙丹丫到底吃啥</title>
-<meta name="keywords" content="龙丹丫吃啥" />
+<title>到底吃啥</title>
+<meta name="keywords" content="吃啥" />
 <meta name="description" content="不用为今天吃什么发愁了。" />
 <link rel="Shortcut Icon" href="ic.ico" type="image/x-icon" />
 <link rel="stylesheet" type="text/css" href="img/eat-min.css">
@@ -21,7 +21,7 @@
 <footer>
     <div class="copyright">
 
-        <span class="cp">Copyright &copy; 2022.9.9-<script type="text/javascript">copyright=new Date();update=copyright.getFullYear();document.write(""+ update + "");</script> 我何佳明爱你龙丹妮.</span>
+        <span class="cp">Copyright &copy; 2022.9.9-<script type="text/javascript">copyright=new Date();update=copyright.getFullYear();document.write(""+ update + "");</script> 何佳明.</span>
     </div>
 </footer>
 <script type='text/javascript' src='img/jquery-1.11.1.min.js'></script>
@@ -71,7 +71,7 @@
             $i++;
             if($i >=10 ){
                 $('#start').hide();
-        $('#what').html('这么挑？去找何佳明给你选吧！');
+        $('#what').html('这么挑？找何佳明给你选！');
             }
         })
 </script>
